Module01/ex04/file.txt
 Writing this to a file.
 issam was here.
c++ -Wall -Wextra -Werror -c main.cpp -o main.o
main.cpp:17:14: error: unused parameter 'ac' [-Werror,-Wunused-parameter]
int main(int ac, char **av)
             ^
main.cpp:17:25: error: unused parameter 'av' [-Werror,-Wunused-parameter]
int main(int ac, char **av)
                        ^
2 errors generated.
make: *** [main.o] Error 1
➜  ex04 git:(master) ✗ make
c++ -Wall -Wextra -Werror -c main.cpp -o main.o
c++ -Wall -Wextra -Werror -std=c++98 main.o -o manipulation
➜  ex04 git:(master) ✗ ./manipulation 
➜  ex04 git:(master) ✗ make fclean 
rm -rf main.o
rm -rf manipulation
➜  ex04 git:(master) ✗ make
c++ -Wall -Wextra -Werror -c main.cpp -o main.o
c++ -Wall -Wextra -Werror -std=c++98 main.o -o manipulation
➜  ex04 git:(master) ✗ ./manipulation 
 Writing this to a file.
➜  ex04 git:(master) ✗ make
c++ -Wall -Wextra -Werror -c main.cpp -o main.o
c++ -Wall -Wextra -Werror -std=c++98 main.o -o manipulation
➜  ex04 git:(master) ✗ ./manipulation 
 issam was here.
➜  ex04 git:(master) ✗ make
c++ -Wall -Wextra -Werror -c main.cpp -o main.o
c++ -Wall -Wextra -Werror -std=c++98 main.o -o manipulation
➜  ex04 git:(master) ✗ ./manipulation 
 Writing this to a file.
 issam was here.
➜  ex04 git:(master) ✗ make
c++ -Wall -Wextra -Werror -c main.cpp -o main.o
c++ -Wall -Wextra -Werror -std=c++98 main.o -o manipulation
➜  ex04 git:(master) ✗ ./manipulation 
➜  ex04 git:(master) ✗ make fclean 
rm -rf main.o
rm -rf manipulation